Replace property file mess with json mess